--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       GF_AUTH_ANONYMOUS_ENABLED: ${GF_AUTH_ANONYMOUS_ENABLED}
       GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
     volumes:
-      - /grafana:/var/lib/grafana
+      - /grafana/data:/var/lib/grafana
     networks:
       - backend
     restart: unless-stopped
@@ -65,7 +65,7 @@ services:
       - "-config.file=/etc/loki/loki.yml"
     volumes:
       - ./loki/loki.yml:/etc/loki/loki.yml
-      - ./loki:/loki
+      - ./loki/data:/loki
     # ports:
     #   - "3100:3100"
     networks:
